# ComputerGrafik

./: .gitignore  CMakeLists.txt  README.md  dummy.txt
application/: solar_system.cpp
cmake_out/: CMakeCache.txt  CPackConfig-glbinding.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  revision
cmake_out/Debug/: OpenGLFramework  libglfw.3.1.dylib
framework/include/: camera.hpp  mesh.hpp  model.hpp  model_loader.hpp  orb.hpp  particles.hpp  planet.hpp  point_cloud.hpp  program.hpp  renderer.hpp  scene_node.hpp  shader_loader.hpp  starfield.hpp  sun.hpp  texture.hpp  texture_loader.hpp  utils.hpp
framework/source/: mesh.cpp  model.cpp  model_loader.cpp  orb.cpp  planet.cpp  shader_loader.cpp  sun.cpp  texture_loader.cpp  utils.cpp
include/: mesh.hpp  model_loader.hpp  shader_loader.hpp
resources/shaders/: black.frag  lightmap.frag  lightmap.vert  lines.frag  lines.vert  particles.frag  particles.vert  pointcloud.frag  pointcloud.vert  quad.frag  quad.vert  simple.frag  simple.vert  white.frag  white.vert
scripts/: OpenGLFramework.sublime-project
source/: main.cpp  mesh.cpp  model_loader.cpp  shader_loader.cpp
